fixed typo in type definition, corrected code
